--- a/source/installation/index.html
+++ b/source/installation/index.html
@@ -228,7 +228,7 @@ toc: true
         <td>✅</td><td>❌</td><td>❌</td><td>✅</td>
     </tr>
     <tr>
-        <td>Snapshots</td>
+        <td>Backups</td>
         <td>✅</td><td>❌</td><td>❌</td><td>✅</td>
     </tr>
     <tr>
