reuse more images

--- a/source/energy/index.html
+++ b/source/energy/index.html
@@ -3,7 +3,8 @@ layout: landingpage
 title: "Energy Management"
 date: 2021-07-28
 description: "Manage your home enegy with Home Assistant"
-og_image: /images/energy/hero.jpg
+hero_image: /images/energy/hero.jpg
+og_image: /images/blog/2021-08-energy/social.png
 tagline: The world is heating up. Together we can fix that.
 sections:
   - title: "Monitor usage"
@@ -47,7 +48,7 @@ sections:
     entries:
       - title: "Time your usage."
         description: "It’s cheaper to consume the energy you produce than to give it back to the grid. Home Assistant helps you turn on the power hungry things when your usage needs a boost."
-        image: /images/energy/placeholder.png
+        image: /images/blog/2021-08-energy/solar-production.png 
       - title: "Get ahead with solar production forecasts."
         description: "It’s cheaper to consume the energy you produce than to give it back to the grid. Home Assistant helps you turn on the power hungry things when your usage needs a boost."
         image: /images/energy/placeholder.png
