add lorem ipsum

--- a/source/energy/index.html
+++ b/source/energy/index.html
@@ -49,8 +49,8 @@ sections:
       - title: "Time your usage."
         description: "It’s cheaper to consume the energy you produce than to give it back to the grid. Home Assistant helps you turn on the power hungry things when your usage needs a boost."
         image: /images/blog/2021-08-energy/solar-production.png 
-      - title: "Get ahead with solar production forecasts."
-        description: "It’s cheaper to consume the energy you produce than to give it back to the grid. Home Assistant helps you turn on the power hungry things when your usage needs a boost."
+      - title: "Lorem ipsum."
+        description: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. In vestibulum lobortis metus, ut laoreet lectus posuere et."
         image: /images/energy/placeholder.png
 ---
 
