--- a/source/energy/index.html
+++ b/source/energy/index.html
@@ -22,12 +22,9 @@ sections:
     description: "Home Assistant works with off-the-shelf hardware to monitor your energy consumption and production."
     image: /images/energy/vector-money.png
     entries:
-      - title: "Lorem ipsum."
-        description: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. In vestibulum lobortis metus, ut laoreet lectus posuere et."
-        image: /images/energy/placeholder.png
-      - title: "Lorem ipsum."
-        description: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. In vestibulum lobortis metus, ut laoreet lectus posuere et."
-        image: /images/energy/placeholder.png
+      - title: "Consumption overview."
+        description: "Get an overview of your energy consumption."
+        image: /images/energy/cost.png
 
   - title: "Use existing hardware"
     description: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc nec magna sem. Donec felis nunc, commodo."
