replace lorem ipsum

--- a/source/energy/index.html
+++ b/source/energy/index.html
@@ -8,7 +8,7 @@ og_image: /images/blog/2021-08-energy/social.png
 tagline: The world is heating up. Together we can fix that.
 sections:
   - title: "Monitor usage"
-    description: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc nec magna sem. Donec felis nunc, commodo."
+    description: "Monitor the energy usage, transition to sustainable energy and save money."
     image: /images/energy/vector-graph.png
     entries:
       - title: "Know where it goes."
@@ -27,7 +27,7 @@ sections:
         image: /images/energy/cost.png
 
   - title: "Use existing hardware"
-    description: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc nec magna sem. Donec felis nunc, commodo."
+    description: "Home Assistant is vendor agnostic and there is no vendor lock-in – you can use any hardware that you want."
     image: /images/energy/vector-connect.png
     entries:
       - title: "Open-source solutions."
@@ -40,22 +40,21 @@ sections:
         read_more: https://github.com/klaasnicolaas/home-assistant-glow/
 
   - title: "Super charge your solar panels"
-    description: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc nec magna sem. Donec felis nunc, commodo."
+    description: "Schedule power usage based on solar production predictions."
     image: /images/energy/vector-sun.png
     entries:
       - title: "Time your usage."
         description: "It’s cheaper to consume the energy you produce than to give it back to the grid. Home Assistant helps you turn on the power hungry things when your usage needs a boost."
         image: /images/blog/2021-08-energy/solar-production.png 
-      - title: "Lorem ipsum."
-        description: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. In vestibulum lobortis metus, ut laoreet lectus posuere et."
-        image: /images/energy/placeholder.png
+
 ---
 
 <div class="material-card text banner-overlay">
     <div>
         <div class="banner-overlay-header">Don't have Home Assistant? It's free.</div>
         <div class="banner-overlay-content">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. In vestibulum lobortis metus, ut laoreet lectus posuere et. Maecenas nec viverra nibh. Fusce faucibus odio vitae posuere consectetur.
+        With Home Assistant we want to do our part to help take on the climate crisis, and help you do the same. One part of fighting the climate crisis is making sure our homes are energy efficient and use low-carbon energy sources.
+        <br />Get started today!
         </div>
     </div>
     <a href="/getting-started" class="energy-button-getting-started">
