--- a/source/home-energy-management/index.html
+++ b/source/home-energy-management/index.html
@@ -35,7 +35,7 @@ sections:
         image: /images/docs/energy/slimmelezer.jpg
       - title: "Home Assistant Glow."
         description: "Open-source energy meter that works with most energy meters."
-        image: /images/docs/energy/home-assistant-glow.jpg 
+        image: /images/docs/energy/home-assistant-glow.jpg
         image_description: "Home Assistant Glow attached to an energy meter"
         read_more: https://github.com/klaasnicolaas/home-assistant-glow/
 
@@ -45,7 +45,7 @@ sections:
     entries:
       - title: "Time your usage."
         description: "It’s cheaper to consume the energy you produce than to give it back to the grid. Home Assistant helps you turn on the power hungry things when your usage needs a boost."
-        image: /images/blog/2021-08-energy/solar-production.png 
+        image: /images/blog/2021-08-energy/solar-production.png
 
 ---
 
@@ -57,7 +57,7 @@ sections:
         <br />Get started today!
         </div>
     </div>
-    <a href="/getting-started" class="energy-button-getting-started">
+    <a href="/getting-started">
         <div class="banner-overlay-button bottom right">
             <div>Get started</div>
         </div>
