--- a/source/blue/index.html
+++ b/source/blue/index.html
@@ -25,7 +25,7 @@ og_image: /images/blue/blue_hero.jpg
 ---
 
 <div class="content">
-  <div class="material-card text banner-overlay">
+  <div class="material-card text banner-overlay with-box">
     <div>
       <div class="banner-overlay-header">The missing piece</div>
       <div class="banner-overlay-content">
