--- a/source/home-energy-management/index.html
+++ b/source/home-energy-management/index.html
@@ -1,8 +1,8 @@
 ---
 layout: landingpage
-title: "Energy Management"
+title: "Home Energy Management"
 date: 2021-07-28
-description: "Manage your home enegy with Home Assistant"
+description: "Monitor your energy usage, transition to sustainable energy and save money"
 hero_image: /images/energy/hero.jpg
 og_image: /images/blog/2021-08-energy/social.png
 tagline: The world is heating up. Together we can fix that.
@@ -12,32 +12,38 @@ sections:
     image: /images/energy/vector-graph.png
     entries:
       - title: "Know where it goes."
-        description: "Home Assistant shows at a glance how your energy system is performing and where the energy is going."
+        description: "Home Assistant shows at a glance how much you're consumping, producing and where this energy is going."
         image: /images/energy/distribution.png
       - title: "Keep an eye on your devices."
-        description: "Track the energy use and cost of individual devices to see their impact on your energy bill."
+        description: "Track the energy use of individual devices to see their impact on your energy consumption."
         image: /images/energy/individual_devices.png
 
   - title: "Track your costs"
-    description: "Home Assistant works with off-the-shelf hardware to monitor your energy consumption and production."
+    description: "Home Assistant helps you keep track of the costs and compensation for your energy consumption and production."
     image: /images/energy/vector-money.png
     entries:
       - title: "Consumption overview."
         description: "Get an overview of your energy consumption."
         image: /images/energy/cost.png
 
-  - title: "Use existing hardware"
-    description: "Home Assistant is vendor agnostic and there is no vendor lock-in – you can use any hardware that you want."
+  - title: "Use any hardware"
+    description: ""
     image: /images/energy/vector-connect.png
     entries:
-      - title: "Open-source solutions."
-        description: "But we’ve also worked with the community to develop open-source solutions for you to build and install."
+      - title: "Bring your own hardware"
+        description: "Home Assistant is vendor agnostic and there is no vendor lock-in: we work with any device or service that allows us to retrieve the data."
+        image: /images/blue/blue_hero.jpg
+        read_more: /integrations/#energy
+      - title: "SlimmeLezer"
+        description: >
+          We created SlimmeLezer, a device that connects to electricity meters with P1 ports and makes the data locally available in Home Assistant.
         image: /images/docs/energy/slimmelezer.jpg
+        read_more: /docs/energy/electricity-grid/#connect-using-a-p1-port
       - title: "Home Assistant Glow."
-        description: "Open-source energy meter that works with most energy meters."
+        description: "We created Home Assistant Glow, a device that reads the consumption LED on your electricity meter and make it locally available in Home Assistant."
         image: /images/docs/energy/home-assistant-glow.jpg
         image_description: "Home Assistant Glow attached to an energy meter"
-        read_more: https://github.com/klaasnicolaas/home-assistant-glow/
+        read_more: /docs/energy/electricity-grid/#reading-the-meter-via-a-pulse-counter
 
   - title: "Super charge your solar panels"
     description: "Schedule power usage based on solar production predictions."
@@ -51,15 +57,19 @@ sections:
 
 <div class="material-card text banner-overlay">
     <div>
-        <div class="banner-overlay-header">Don't have Home Assistant? It's free.</div>
+        <div class="banner-overlay-header">Home Energy Management</div>
         <div class="banner-overlay-content">
-        With Home Assistant we want to do our part to help take on the climate crisis, and help you do the same. One part of fighting the climate crisis is making sure our homes are energy efficient and use low-carbon energy sources.
-        <br />Get started today!
+          With Home Assistant we want to do our part to help take on the climate crisis, and help you do the same. One part of fighting the climate crisis is making sure our homes are energy efficient and use low-carbon energy sources.
+          <br><br>
+          Home Assistant helps you to monitor your energy usage, transition to sustainable energy and save money.
         </div>
     </div>
-    <a href="/getting-started">
-        <div class="banner-overlay-button bottom right">
-            <div>Get started</div>
-        </div>
-    </a>
+    <div class="links">
+      <a href="/getting-started">
+        Get started
+      </a>
+      <a href="https://demo.home-assistant.io/#/energy">
+        View Demo
+      </a>
+    </div>
 </div>
