Apply suggestions from code review
Co-authored-by: Franck Nijhof <git@frenck.dev>

--- a/source/home-energy-management/index.html
+++ b/source/home-energy-management/index.html
@@ -12,7 +12,7 @@ sections:
     image: /images/energy/vector-graph.png
     entries:
       - title: "Know where it goes."
-        description: "Home Assistant shows at a glance how much you're consumping, producing and where this energy is going."
+        description: "Home Assistant shows at a glance how much you're consuming, producing and where this energy is going."
         image: /images/energy/distribution.png
       - title: "Keep an eye on your devices."
         description: "Track the energy use of individual devices to see their impact on your energy consumption."
@@ -45,12 +45,12 @@ sections:
         image_description: "Home Assistant Glow attached to an energy meter"
         read_more: /docs/energy/electricity-grid/#reading-the-meter-via-a-pulse-counter
 
-  - title: "Super charge your solar panels"
+  - title: "Supercharge your solar panels"
     description: "Schedule power usage based on solar production predictions."
     image: /images/energy/vector-sun.png
     entries:
       - title: "Time your usage."
-        description: "It’s cheaper to consume the energy you produce than to give it back to the grid. Home Assistant helps you turn on the power hungry things when your usage needs a boost."
+        description: "It’s cheaper to consume the energy you produce than to give it back to the grid. Home Assistant helps you turn on the power-hungry things when your usage needs a boost."
         image: /images/blog/2021-08-energy/solar-production.png
 
 ---
@@ -68,7 +68,7 @@ sections:
       <a href="/getting-started">
         Get started
       </a>
-      <a href="https://demo.home-assistant.io/#/energy">
+      <a href="https://demo.home-assistant.io/#/energy" target="_blank">
         View Demo
       </a>
     </div>
