Use frontpage images

--- a/source/blue/index.html
+++ b/source/blue/index.html
@@ -22,6 +22,7 @@ tagline: >-
     </svg>
 tagline_wide: false
 og_image: /images/blue/blue_hero.jpg
+frontpage_image: /images/frontpage/blue-frontpage.jpg
 ---
 
 <div class="content">
