--- a/source/home-energy-management/index.html
+++ b/source/home-energy-management/index.html
@@ -5,6 +5,7 @@ date: 2021-07-28
 description: "Monitor your energy usage, transition to sustainable energy and save money"
 hero_image: /images/energy/hero.jpg
 og_image: /images/blog/2021-08-energy/social.png
+frontpage_image: /images/frontpage/energy-frontpage.jpg
 tagline: The world is heating up. Together we can fix that.
 sections:
   - title: "Monitor usage"
