Add link to landingpage for people with HA

--- a/source/home-energy-management/index.html
+++ b/source/home-energy-management/index.html
@@ -82,3 +82,4 @@ sections:
       </a>
     </div>
 </div>
+<div style='text-align: center; margin-top: 10px'>Already have Home Assistant? {% my energy title="Start here" %}</div>
