--- a/source/index.html
+++ b/source/index.html
@@ -248,3 +248,7 @@ description:
     </div>
   </div>
 </div>
+<script
+  src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+  integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs="
+  crossorigin="anonymous"></script>
