--- a/source/index.html
+++ b/source/index.html
@@ -252,3 +252,7 @@ description:
   src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
   integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs="
   crossorigin="anonymous"></script>
+<script type="text/javascript">
+jQuery( "ul.menu li:has(ul)" ).addClass( "menuhasdropdown" );
+</script>
+
