--- a/source/index.html
+++ b/source/index.html
@@ -172,7 +172,7 @@ feedback: false
     <div class="sub-title">Features</div>
     {% include custom/features.html %}
 
-    <div class="seen-press grid__item one-half lap-one-half palm-one-whole">
+    <div class="sponsored-by grid__item one-half lap-one-half palm-one-whole">
       <div class="material-card">
         <h1>Home Assistant is sponsored by</h1>
 
